Kata7 Estructuras de control ciclos

--- a/kata6-introduccion-a-las-listas.ipynb
+++ b/kata6-introduccion-a-las-listas.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "En nuestro sistema solar existen  8 planetas\n",
+      "['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano', 'Neptuno']\n",
+      "Por ahora nos falta un planeta solo tenemos  8 planetas\n",
       "['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano', 'Neptuno', 'Pluton']\n",
-      "9\n"
+      "En nuestro sistema solar existen  9 planetas\n"
      ]
     }
    ],
    "source": [
     "planets = ['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano', 'Neptuno']\n",
+    "print(planets)\n",
     "numerodeplanetas = len(planets)\n",
-    "print('En nuestro sistema solar existen ', numerodeplanetas, \"planetas\")\n",
+    "print('Por ahora nos falta un planeta solo tenemos ', numerodeplanetas, \"planetas\")\n",
     "planets.append('Pluton')\n",
     "numerodeplanetas = len(planets)\n",
     "print(planets)\n",
-    "print(numerodeplanetas)"
+    "print('En nuestro sistema solar existen ', numerodeplanetas, \"planetas\")"
    ]
   },
   {
